--- a/src/index.css
+++ b/src/index.css
@@ -183,5 +183,16 @@ button:focus-visible {
   .main-content-app {
     width: 100%;
   }
+  .place-main {
+    width: 95%;
+    margin: 0 auto;
+  }
+  .place-buttons {
+    width: 12rem;
+  }
+  .place-buttons button {
+    width: 80px;
+    height: 80px;
+  }
 }
 
